User Model created, GET and POST routes vreated

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "bcrypt": "^3.0.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
